<resources>
    <string name="app_name">Git Me Some Version Control</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quit">Quit</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title">Title</string>
    <string name="enter_name_here_and_click_start">Enter Name Here and Click Start</string>
    <string name="_1_which_of_the_following_git_command_lists_all_the_new_or_modified_files_to_be_commited">1. Which of the following Git command lists all the new or modified files to be commited?</string>
    <string name="git_checkout">git checkout</string>
    <string name="git_status">git status</string>
    <string name="git_branch">git branch</string>
    <string name="_2_what_does_git_stash_drop_do">2. What does \'\'git stash drop\'\' do?</string>
    <string name="it_lists_all_stashed_changesets">It lists all stashed changesets</string>
    <string name="it_temporarily_stores_all_modified_tracked_files">It temporarily stores all modified tracked files</string>
    <string name="it_discards_the_most_recently_stashed_changeset">It discards the most recently stashed changeset</string>
    <string name="_3_which_of_the_following_git_commands_lists_version_history_for_the_current_branch">3. Which of the following git commands lists version history for the current branch?</string>
    <string name="git_log">git log</string>
    <string name="git_diff">git diff</string>
    <string name="_4_the_following_are_all_git_commands_except">4. The following are all git commands except?</string>
    <string name="git_pull">git pull</string>
    <string name="git_init">git init</string>
    <string name="git_stop">git stop</string>
    <string name="_5_write_a_git_command_that_can_download_a_project_and_its_entire_version_history">5. Write a git command that can download a project and its entire version history?</string>
    <string name="_6_click_on_the_commands_that_can_redo_commits_which_erases_mistakes_and_craft_replacement_history">6. Click on the commands that can redo commits which erases mistakes and craft replacement history.</string>
    <string name="git_rm_file"><![CDATA[git rm <file>]]></string>
    <string name="git_reset_commit"><![CDATA[git reset <commit>]]></string>
    <string name="git_reset_hard_commit"><![CDATA[git reset --hard <commit>]]></string>
    <string name="_7_what_does_this_image_represent">7. What does this Image represent?</string>
    <string name="git">git</string>
    <string name="_8_this_git_command_git_show_commit_does_all_the_following_except"><![CDATA[8. This git command \'\'git show <commit>\'\' does all the following except?]]></string>
    <string name="lists_version_history_for_current_branch">lists version history for current branch</string>
    <string name="outputs_metadata">outputs metadata</string>
    <string name="content_changes_of_the_specified_commit">content changes of the specified commit</string>
    <string name="_9_what_does_git_rm_cached_file_do">9. What does \'\'git rm --cached file\'\' do?</string>
    <string name="it_removes_the_file_from_version_control_but_preserves_the_file_locally">It removes the file from version control but preserves the file locally</string>
    <string name="lists_all_ignored_files_in_this_project">Lists all ignored files in this project</string>
    <string name="combines_the_specified_branch_and_updates_the_working_directory">Combines the specified branch and updates the working directory</string>
    <string name="_10_what_does_git_stash_pop">10. What does \'\'git stash pop\'\'?</string>
    <string name="restores_the_most_recently_stashed_files">Restores the most recently stashed files</string>
    <string name="discards_the_most_recently_stashed_changeset">Discards the most recently stashed changeset</string>
    <string name="changes_the_file_name_and_prepares_it_for_commit">Changes the file name and prepares it for commit</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>
