<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mfonobongumondia.gitgithub.Main2Activity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_which_of_the_following_git_command_lists_all_the_new_or_modified_files_to_be_commited"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:padding="15dp"
            android:layout_below="@id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_checkout"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_status"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_branch"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/text2"
            android:layout_below="@id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_what_does_git_stash_drop_do"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_below="@id/text2"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_lists_all_stashed_changesets"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_temporarily_stores_all_modified_tracked_files"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_discards_the_most_recently_stashed_changeset"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup2"
            android:text="@string/_3_which_of_the_following_git_commands_lists_version_history_for_the_current_branch"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_below="@id/text3"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_log"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_pull"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_diff"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup3"
            android:text="@string/_4_the_following_are_all_git_commands_except"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_below="@id/text4"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_pull"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_init"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/git_stop"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup4"
            android:text="@string/_5_write_a_git_command_that_can_download_a_project_and_its_entire_version_history"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_below="@id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/git"
            android:padding="15dp"
            android:inputType= "textMultiLine"/>

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText1"
            android:text="@string/_6_click_on_the_commands_that_can_redo_commits_which_erases_mistakes_and_craft_replacement_history"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_below="@id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/git_rm_file"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_below="@id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/git_reset_commit"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:layout_below="@id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/git_reset_hard_commit"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox3"
            android:text="@string/_7_what_does_this_image_represent"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/gitlabcoat"
            android:layout_below="@+id/text7"
            android:layout_width="280dp"
            android:layout_height="90dp"
            android:scaleType="centerInside"
            android:src="@drawable/gitlabcoat" />

        <EditText
            android:id="@+id/editText2"
            android:layout_below="@id/gitlabcoat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:hint="@string/git"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:text="@string/_8_this_git_command_git_show_commit_does_all_the_following_except"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/checkbox4"
            android:layout_below="@id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:text="@string/lists_version_history_for_current_branch"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox5"
            android:layout_below="@id/checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:text="@string/outputs_metadata"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkbox6"
            android:layout_below="@id/checkbox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="20sp"
            android:text="@string/content_changes_of_the_specified_commit"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/text9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox6"
            android:text="@string/_9_what_does_git_rm_cached_file_do"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_below="@id/text9"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_removes_the_file_from_version_control_but_preserves_the_file_locally"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lists_all_ignored_files_in_this_project"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/combines_the_specified_branch_and_updates_the_working_directory"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/text10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup5"
            android:text="@string/_10_what_does_git_stash_pop"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup6"
            android:layout_below="@id/text10"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restores_the_most_recently_stashed_files"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discards_the_most_recently_stashed_changeset"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

            <RadioButton
                android:id="@+id/radio18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changes_the_file_name_and_prepares_it_for_commit"
                android:textSize="20sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"/>

        </RadioGroup>


        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioGroup6"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:background="#80D8FF"
            android:onClick="submit"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetButton"
            android:layout_below="@id/radioGroup6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF9E80"
            android:text="@string/reset"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:onClick="resetButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</ScrollView>

